--- a/src/main.css
+++ b/src/main.css
@@ -10,8 +10,8 @@ ul {
 
 .main_content {
   display: flex;
-  justify-content: space-between;
-  padding: 158px 158px 79px 118px;
+  justify-content: space-around;
+  padding: 158px 158px 70px 118px;
 }
 
 .sweets_left_side,
@@ -21,56 +21,61 @@ ul {
   flex-basis: 470px;
 }
 
+.sweets_left_side {
+  padding: 35px 0  0 30px;
+  margin-right: 80px;
+}
+
 .sweets_title {
   display: flex;
   align-items: flex-start;
 }
 
-h1 {
+.headline {
   font-family: Gilroy, serif;
   font-size: 52px;
   color: var(--font_color);
-  margin: 0 15px 0 0;
+  margin: 0 35px 0 0;
   line-height: 58px;
 }
 
 .description {
   font-family: Roboto, serif;
-  font-style: normal;
-  font-weight: normal;
   font-size: 16px;
   line-height: 24px;
   color: var(--copyright_color);
 }
 
-hr {
+.main_hr {
   border: none;
   height: 1px;
   background-color: var(--light_background);
   width: 100%;
-  margin-left: 0;
+}
+
+.li_right_side {
+  height: 100px;
+  margin-bottom: 30px;
 }
 
 .form_for_mail {
   margin-top: 30px;
 }
 
-.form_for_mail label {
+.label_mail {
   font-family: Gilroy, serif;
   font-size: 18px;
-  line-height: normal;
   color: var(--font_color);
   display: block;
 }
 
 .container_for_mail {
   position: relative;
-  max-width: 470px;
   width: 100%;
   margin-top: 20px;
 }
 
-.container_for_mail input {
+.mail_input {
   background: var(--light_background);
   border-radius: 30px;
   height: 60px;
@@ -80,26 +85,26 @@ hr {
   padding-left: 30px;
 }
 
-.container_for_mail input:hover {
+.mail_input:hover {
   background: var(--hover_background);
   transition: 0.3s;
 }
 
-.container_for_mail input:focus:valid {
+.mail_input:focus:valid {
   border: 2px solid var(--green_border);
   outline: none;
   transition: 0.3s;
   background-color: white;
 }
 
-.container_for_mail input:active {
+.mail_input:active {
   border: 2px solid white;
   outline: none;
   transition: 0.3s;
   background-color: white;
 }
 
-.container_for_mail input:focus:invalid {
+.mail_input:focus:invalid {
   background: var(--error_background);
   border: 2px solid var(--error_border);
   outline: none;
@@ -107,14 +112,14 @@ hr {
 
 }
 
-.container_for_mail input::placeholder {
+.mail_input::placeholder {
   color: var(--placeholder_color);
   font-weight: 400;
   font-size: 14px;
   font-family: "Roboto", serif;
 }
 
-.container_for_mail button {
+.container_for_mail .mail_button {
   position: absolute;
   right: 10px;
   top: 50%;
@@ -126,12 +131,12 @@ hr {
   transform: translateY(-50%);
 }
 
-.container_for_mail button:hover {
+.container_for_mail .mail_button:hover {
   border: 2px solid var(--green_border);
   transition: 0.3s;
 }
 
-.container_for_mail button:focus {
+.container_for_mail .mail_button:focus {
   outline: none;
   box-sizing: border-box;
   background: var(--green_border);
@@ -153,7 +158,7 @@ hr {
   margin-top: 0;
 }
 
-.list_icon a {
+.list_icon .nav_icon {
   background-color: var(--light_background);
   width: 24px;
   height: 24px;
@@ -163,12 +168,12 @@ hr {
   justify-content: center;
 }
 
-.list_icon a:hover {
+.list_icon .nav_icon:hover {
   background-color: var(--hover_background);
   transition: 0.3s;
 }
 
-.list_icon a:focus {
+.list_icon .nav_icon:focus {
   border: 2px solid var(--green_border);
   transition: 0.1s;
   box-sizing: border-box;
@@ -180,16 +185,20 @@ hr {
   flex-direction: column;
 }
 
+.li_left_side {
+  height: 100px;
+}
+
 .span_js {
   font-family: Gilroy, serif;
-  font-size: 10px;
+  font-size: 12px;
   letter-spacing: 0.1em;
   color: var(--violet_color);
 }
 
 .name_li {
   font-family: Gilroy, serif;
-  font-size: 18px;
+  font-size: 19px;
   color: var(--font_color);
   margin-top: 0;
   margin-bottom: 20px;
@@ -202,11 +211,10 @@ hr {
 
 .span_CSS {
   font-family: Roboto, serif;
-  font-style: normal;
-  font-weight: normal;
   font-size: 14px;
   line-height: 21px;
   color: var(--copyright_color);
+  margin-bottom: 20px;
 }
 
 .link {
@@ -216,7 +224,6 @@ hr {
   border-radius: 22px;
   font-family: Gilroy, serif;
   font-size: 10px;
-  line-height: normal;
   text-align: center;
   letter-spacing: 0.1em;
   color: var(--font_color);
@@ -237,25 +244,24 @@ hr {
   flex-wrap: wrap;
 }
 
-.container_link button {
+.container_link .link {
   margin-top: -5px;
 }
 
 .all_candies {
   background: var(--violet_color);
   border-radius: 22px;
-  max-width: 470px;
   width: 100%;
-  height: 44px;
+  height: 50px;
   font-family: Gilroy, serif;
   font-size: 14px;
-  line-height: normal;
   text-align: center;
   color: white;
   border: none;
   align-self: center;
-  margin-top: 54px;
+  margin-top: 22px;
   outline: none;
+  padding: 0;
 }
 
 .all_candies:hover {
@@ -267,12 +273,12 @@ hr {
 .footer_lists {
   background: var(--font_color);
   display: flex;
-  padding: 269px 197px 0 155px;
-  justify-content: space-between;
+  padding: 269px 0 0 155px;
+  justify-content: flex-start;
 }
 
-.footer_lists ul {
-  padding: 0;
+.all_ul {
+  padding: 13px 0 0;
 }
 
 .footer_lists .title_li {
@@ -283,14 +289,13 @@ hr {
   display: block;
 }
 
-.footer_lists li {
+.all_li {
   font-family: Roboto, serif;
-  font-style: normal;
-  font-weight: normal;
   font-size: 12px;
   color: var(--li-font_color);
   list-style: none;
-  margin-bottom: 11px;
+  line-height: 25px;
+  padding: 4px 10px 0 0;
 }
 
 .copyright {
@@ -303,7 +308,7 @@ hr {
   padding-right: 172px;
 }
 
-ul .site_mail {
+.site_mail {
   color: var(--green_border);
 }
 
@@ -316,11 +321,12 @@ ul .site_mail {
 
 .left_foot {
   justify-content: space-between;
-  margin-right: 160px;
 }
 
 .right_foot {
   justify-content: space-between;
+  padding-top: 13px;
+  margin-left: 200px;
 }
 
 .last {
@@ -329,15 +335,16 @@ ul .site_mail {
   line-height: 17px;
 }
 
-ul .cooperation {
+.cooperation {
   font-family: Roboto, serif;
   font-size: 12px;
   color: white;
   display: block;
   margin-top: 36px;
+  margin-right: 50px;
 }
 
-.footer_lists a {
+.a_footer {
   font-size: 12px;
   color: var(--li-font_color);
   text-decoration: none;
